design upgrade